# boost-asio-example

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.user.c2a34f5  Doxyfile  README.md  asiocommunicator.cpp  asiocommunicator.h  asiocommunicator.hpp  main.cpp  manual.md  msgallocator.hpp  readme.odt  safecallback.hpp
example/: CMakeLists.txt  main.cpp
include/tea/: asiocommunicator.hpp  safecallback.hpp  serverclient.hpp
include/tea/detail/: asioserverclient.hpp  asyncoperations.hpp  detail.hpp  globalcontext.hpp  message.hpp  safecallback.hpp
src/: .clang-tidy  CMakeLists.txt  asiocommunicator.hpp  main.cpp
